Fix: Vertical Scrollbar on Promotion Form

--- a/BarApp/src/app/styles/form.css
+++ b/BarApp/src/app/styles/form.css
@@ -214,6 +214,12 @@ ion-item:not(.item-label) .sc-ion-textarea-md-h {
   margin: auto;
 }
 
+@media (min-width: 768px) {
+  .prom-form {
+    height: 122vh;
+  }
+}
+
 @media (max-width: 768px) {
   .form-container ion-card {
     min-width: 320px;
